--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "repository": "",
   "scripts": {
-    "start": "NODE_ENV=development node server.js",
+    "start": "node server.js",
     "test": "NODE_ENV=test mocha --compilers js:babel-core/register  --recursive --require ./test/setup.js",
     "test:watch": "npm test -- --watch",
     "build": "NODE_ENV=production webpack src/index.js --config webpack.config.production.js",
@@ -36,11 +36,13 @@
     "mocha": "^3.1.0",
     "node-sass": "^3.10.1",
     "react-addons-test-utils": "^15.3.2",
+    "react-hot-loader": "^3.0.0-beta.6",
     "rimraf": "^2.5.4",
     "sass-loader": "^4.0.2",
     "webpack": "^1.13.2",
-    "webpack-dev-middleware": "^1.8.3",
-    "webpack-hot-middleware": "^2.12.2",
+    "webpack-dev-middleware": "^1.8.4",
+    "webpack-dev-server": "^1.16.2",
+    "webpack-hot-middleware": "^2.13.0",
     "webpack-module-hot-accept": "^1.0.4"
   },
   "dependencies": {
@@ -57,6 +59,7 @@
     "redux": "^3.6.0",
     "redux-promise": "^0.5.3",
     "redux-thunk": "^2.1.0",
-    "tcomb-form": "^0.9.10"
+    "tcomb-form": "^0.9.10",
+    "webpack-dev-server": "^1.16.2"
   }
 }
