Set up Authentication with redirecting - after login redirect user to intended path - use an onEnter in route to verify logged in - verify token on app load in order to determine if they're initially logged in

--- a/package.json
+++ b/package.json
@@ -46,10 +46,10 @@
     "webpack-module-hot-accept": "^1.0.4"
   },
   "dependencies": {
+    "axios": "^0.15.2",
     "babel-preset-stage-1": "^6.16.0",
     "history": "^4.3.0",
     "immutable": "^3.8.1",
-    "isomorphic-fetch": "^2.2.1",
     "jwt-decode": "^2.1.0",
     "lodash": "^4.16.3",
     "react": "^15.3.2",
@@ -57,9 +57,9 @@
     "react-redux": "^5.0.0-beta.3",
     "react-router": "^3.0.0",
     "redux": "^3.6.0",
+    "redux-logger": "^2.7.4",
     "redux-promise": "^0.5.3",
     "redux-thunk": "^2.1.0",
-    "tcomb-form": "^0.9.10",
     "webpack-dev-server": "^1.16.2"
   }
 }
