--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "jwt-decode": "^2.1.0",
     "lodash": "^4.16.3",
     "react": "^15.3.2",
+    "react-datepicker": "^0.33.0",
     "react-dom": "^15.3.2",
     "react-redux": "^5.0.0-beta.3",
     "react-router": "^3.0.0",
