--- a/.eslintrc
+++ b/.eslintrc
@@ -5,7 +5,7 @@
     "indent": [2, 2, { "SwitchCase": 1 }],
     "quotes": [2, "single"],
     "linebreak-style": [2, "unix"],
-    "semi": [2, "always"],
+    "semi": [2, "never"],
     "no-unused-vars": 0,
     "no-console": 0
   },
